RESOLVED FIXED207713
Ensure animations that lose their effect don't schedule an animation update
https://bugs.webkit.org/show_bug.cgi?id=207713
Summary Ensure animations that lose their effect don't schedule an animation update
Sunny He
Reported 2020-02-13 12:05:58 PST
Attachments
Patch (3.98 KB, patch)
2020-02-13 12:08 PST, Sunny He
no flags
Patch (4.99 KB, patch)
2020-02-14 09:08 PST, Sunny He
no flags
Sunny He
Comment 1 2020-02-13 12:08:15 PST
Antoine Quint
Comment 2 2020-02-14 07:49:19 PST
Comment on attachment 390675 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=390675&action=review > Source/WebCore/ChangeLog:3 > + Fix handling of animations which lose their effect I would suggest this bug is renamed "Ensure animations that lose their effect don't schedule an animation update". It's more descriptive of the issue that is fixed. > Source/WebCore/ChangeLog:7 > + You need a description for what your patch does. Something like "An active animation for which the effect is removed may be considered for an upcoming animation resolution. However, WebAnimation::timeToNextTick() expects a valid effect to be available to be able to determine timing. We now check an animation is relevant before calling timeToNextTick() and add an ASSERT() in that function to catch cases where an animation effect might not be available." > Source/WebCore/ChangeLog:8 > + Test: fast/animation/animation-null-effect.html I would file this under LayoutTests/webanimations with other Web Animations tests. The fast/animation directory only contains CSS-based animations tests.
Sunny He
Comment 3 2020-02-14 09:08:23 PST
WebKit Commit Bot
Comment 4 2020-02-14 10:29:52 PST
Comment on attachment 390774 [details] Patch Clearing flags on attachment: 390774 Committed r256623: <https://trac.webkit.org/changeset/256623>
WebKit Commit Bot
Comment 5 2020-02-14 10:29:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.